@@ -1,3 +1,9 @@
+kylin-printer (1.0.3) v101; urgency=medium
+
+  * 打印机名称带"+"解决无法打印的问题
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 20 Jan 2021 12:59:00 +0800
+
 kylin-printer (1.0.2) v101; urgency=medium
 
   * 修改下拉列表处获取ppd文件数最多为3个
